--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apssss",
+  "name": "interview_aps",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -37,6 +37,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17"
